[package]
name = "wavelog-bridge"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/mdeltito/wavelog-bridge"

[lints.clippy]
collapsible_if = "allow"
str_to_string = "deny"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "ws"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
humantime = "2"
humantime-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
