[package]
name = "wavelog-relay"
version = "0.1.0"
authors = ["Michael J. Del Tito"]
license = "MIT"
edition = "2024"
repository = "https://github.com/mdeltito/wavelog-relay"

[lints.clippy]
collapsible_if = "allow"
str_to_string = "deny"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "signal", "fs", "io-util"] }
socket2 = { version = "0.6", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "ws"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
humantime = "2"
humantime-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.release]
publish = false
allow-branch = ["main"]
tag-name = "v{{version}}"
tag-message = "wavelog-relay {{version}}"
pre-release-commit-message = "chore: release v{{version}}"
sign-commit = false
sign-tag = false
dev-version = false
